user creation visibility issues solved, as well as peel away effect working. finished new user branch of tree

--- a/src/styles/userCreator.css
+++ b/src/styles/userCreator.css
@@ -9,21 +9,41 @@
   transform: translate(-50%, -50%);
   width: 100%;
 }
-.content.offScreen {
-  transition: .5s;
-  left: -50%;
-}
 input{
   width: 50%;
 }
-#basicInfo {
-  background-color: white; 
-  opacity: 1;
-  transition: 2s ease-out;
-  z-index: 10;
+#info1 {
+  background-color: white;
+  z-index: 11;
 }
-#primaryInfo {
+#info2 {
+  background-color: white;
+  z-index: 10;
+  visibility: hidden;
+}
+#new1 {
+  background-color: white;
   z-index: 9;
+  visibility: hidden;
+}
+#new2 {
+  background-color: white;
+  z-index: 8;
+  visibility: hidden;
+}
+#new2-5 {
+  background-color: white;
+  z-index: 8;
+  opacity: 0;
+  visibility: hidden;
+}
+#new3 {
+  background-color: white;
+  z-index: 7;
+  visibility: hidden;
+}
+#kettleSize {
+  width: 10%;
 }
 
 
